<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/rlHeaderCalendar"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/dateTitlePaddingBottom">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgVNavLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_left_selector" />

    <com.aprilianta.customviews.CustomTextView
        android:id="@+id/tvYearTitle"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:tag="dateTitle"
        android:text="FEBRUARY 2014"
        android:textSize="@dimen/text_size_title" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgVNavRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_right_selector" />
</RelativeLayout>