...
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        custom:cardCornerRadius="8dp">

        <com.aprilianta.customviews.DateRangeCalendarView
            android:id="@+id/cdrvCalendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            custom:calendar_tag="Test"
            custom:date_selection_mode="free_range"
            custom:disable_date_color="#ABABAB"
            custom:editable="true"
...
